# podcast_crawler

./: .env.example  .gitignore  .gitmessage  .markdownlint.yml  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  crates.js  help.html  index.html  rust-toolchain.toml  rustfmt.toml  search-index.js  settings.html  src-files.js
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  coverage.yml  docs.yml  release.yml
benches/: Cargo.toml  load_test.rs
benches/src/: lib.rs
docs/: API.md  DEPLOYMENT.md  DEVELOPMENT.md
markdown_docs/: ARCHITECTURE.md  DEVELOPMENT.md  README.md  WORKFLOW.md  design.md
podcast_crawler/: all.html  index.html  macro.config_set_env!.html  macro.config_set_env.html  macro.config_set_string!.html  macro.config_set_string.html  macro.config_validate!.html  macro.config_validate.html  macro.try_with_debug!.html  macro.try_with_debug.html  macro.try_with_log!.html  macro.try_with_log.html  macro.try_with_retry!.html  macro.try_with_retry.html  macro.try_with_warn!.html  macro.try_with_warn.html  sidebar-items.js
podcast_crawler/crawler/: index.html  sidebar-items.js  struct.HttpCrawler.html  struct.TaskResult.html
podcast_crawler/crawler/batch_processor/: fn.run_batch_processor.html  fn.run_batch_processor_with_inserter.html  index.html  sidebar-items.js
podcast_crawler/crawler/crawler_impl/: index.html  sidebar-items.js  struct.HttpCrawler.html
podcast_crawler/crawler/rate_limiter/: index.html  sidebar-items.js  struct.CrawlerRateLimiter.html
podcast_crawler/crawler/rss/: enum.ParsingState.html  fn.add_to_vec_option.html  fn.clean_html.html  fn.get_attribute_value.html  fn.get_context_as_mut.html  fn.handle_xml_error.html  fn.make_invalid_scope_error.html  fn.make_invalid_url_error.html  fn.parse_bool.html  fn.parse_date.html  fn.update_field.html  fn.update_field_option.html  fn.validate_url.html  index.html  macro.debug_info.html  sidebar-items.js  struct.ParseContext.html  struct.ParserConfig.html  struct.RssFeedParser.html  struct.RssParserState.html
podcast_crawler/crawler/traits/: index.html  sidebar-items.js  trait.Crawler.html  trait.FeedParser.html
podcast_crawler/crawler/url_utils/: fn.calculate_url_similarity.html  fn.distribute_urls.html  index.html  sidebar-items.js
podcast_crawler/crawler_refactor/: index.html  sidebar-items.js
podcast_crawler/crawler_refactor/distributor/: index.html  sidebar-items.js  struct.Distributor.html
podcast_crawler/crawler_refactor/inserter_refactored/: index.html  struct.BatchInserter.html
podcast_crawler/crawler_refactor/pipeline/: index.html  sidebar-items.js  trait.Fetcher.html  trait.Parser.html
podcast_crawler/crawler_refactor/rss/: enum.ParsingState.html  fn.add_to_vec_option.html  fn.clean_html.html  fn.get_attribute_value.html  fn.get_context_as_mut.html  fn.handle_xml_error.html  fn.make_invalid_scope_error.html  fn.make_invalid_url_error.html  fn.parse_bool.html  fn.parse_date.html  fn.update_field.html  fn.update_field_option.html  fn.validate_url.html  index.html  macro.debug_info!.html  macro.debug_info.html  sidebar-items.js  struct.ParseContext.html  struct.ParserConfig.html  struct.RssFeedParser.html  struct.RssParserState.html
podcast_crawler/crawler_refactor/rss_crawler/: index.html  sidebar-items.js  struct.RssCrawler.html
podcast_crawler/crawler_refactor/rss_fetcher/: index.html  sidebar-items.js  struct.RssFetcher.html
podcast_crawler/crawler_refactor/task/: enum.StageStatus.html  index.html  sidebar-items.js  struct.Stage.html  struct.Task.html
podcast_crawler/crawler_refactor/task_management_system/: index.html  (+6 more)
podcast_crawler/infrastructure/: fn.initialize.html  fn.initialize_with_settings.html  index.html  sidebar-items.js
podcast_crawler/metrics/: fn.add_task_handler.html  fn.get_podcast_by_title_handler.html  fn.get_podcast_handler.html  fn.get_podcasts_handler.html  fn.get_podcasts_paginated_handler.html  fn.init_metrics.html  fn.metrics_handler.html  fn.search_podcasts_handler.html  fn.set_crawler.html  fn.start_metrics_server.html  index.html  sidebar-items.js  static.INIT.html  struct.ACTIVE_WORKERS.html  struct.AddTaskRequest.html  struct.CRAWLER.html  struct.FAILED_TASKS.html  struct.GetPodcastsQuery.html  struct.PROCESSED_TASKS.html  struct.PodcastPathParams.html  struct.SUBMITTED_TASKS.html  struct.SearchPodcastsQuery.html  struct.TASK_RETRIES.html  struct.TASK_STAGE_DURATION.html  struct.TASK_STATUS.html
podcast_crawler/schema/: index.html  sidebar-items.js
scripts/: backup_dev_to_test.sh  bump_version.sh  check_installed_package_managers.sh  cleanup.sh  dev.sh  generate_crawler.sh  generate_migration.sh  generate_module.sh  setup_env.sh  setup_test_db.sh  task_analysis.sh  update_changelog.sh
search.desc/podcast_crawler/: podcast_crawler-desc-0-.js
src/: lib.rs  main.rs  metrics.rs  schema.rs
src/crawler/: crawler_impl.rs  mod.rs  rate_limiter.rs  rss.rs  traits.rs  url_utils.rs
src/crawler_refactor/: distributor.rs  inserter_refactored.rs  mod.rs  pipeline.rs  rss.rs  rss_crawler.rs  rss_fetcher.rs  task.rs  task_management_system.rs  thread_manager.rs  timer_queue.rs  worker.rs
src/infrastructure/: init.rs  mod.rs
src/models/: mod.rs
src/podcast_crawler/: lib.rs.html  metrics.rs.html  schema.rs.html
tests/: crawler_test.rs  rss_parser_test.rs
tests/data/: complex_feed.xml  xiaoyuzhou.xml  ximalaya.xml
trait.impl/lazy_static/: trait.LazyStatic.js
type.impl/std/: primitive.tuple.js
(+349 files in other folders)
