[[bench]]
harness = false
name = "load_test"
path = "load_test.rs"

[dependencies]
criterion = {version = "0.4", features = ["async_tokio"]}
podcast_crawler = {path = ".."}
tokio = {version = "1.28", features = ["full", "test-util"]}

[lib]
name = "podcast_crawler_benches"
path = "src/lib.rs"

[package]
edition = "2021"
name = "podcast_crawler_benches"
version = "0.1.0"
